(PC-26268)[PRO] fix: grow offerer select if name is too small

--- a/pro/src/pages/Home/Offerers/OffererDetails.module.scss
+++ b/pro/src/pages/Home/Offerers/OffererDetails.module.scss
@@ -27,6 +27,10 @@
 }
 
 @media (min-width: size.$tablet) {
+  .offerer-select {
+    flex-grow: 1;
+  }
+
   .separator {
     background-color: colors.$grey-medium;
 
